src/ClientApp/src/App.css
/* @import url("http://fonts.cdnfonts.com/css/segoe-ui-4") */

@font-face {
  font-family: SegoeUI;
  src: local("Segoe UI Light"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff2)
      format("woff2"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.woff)
      format("woff"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/light/latest.ttf)
      format("truetype");
  font-weight: 100;
}

@font-face {
  font-family: SegoeUI;
  src: local("Segoe UI Semilight"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.woff2)
      format("woff2"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.woff)
      format("woff"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semilight/latest.ttf)
      format("truetype");
  font-weight: 200;
}

@font-face {
  font-family: SegoeUI;
  src: local("Segoe UI"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2)
      format("woff2"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff)
      format("woff"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf)
      format("truetype");
  font-weight: 400;
}

@font-face {
  font-family: SegoeUI;
  src: local("Segoe UI Bold"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff2)
      format("woff2"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff)
      format("woff"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.ttf)
      format("truetype");
  font-weight: 600;
}

@font-face {
  font-family: SegoeUI;
  src: local("Segoe UI Semibold"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff2)
      format("woff2"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff)
      format("woff"),
    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.ttf)
      format("truetype");
  font-weight: 700;
}

body {
  font-family: "Segoe UI", sans-serif !important;
}
.btn-image--selected img {
  border: 1px solid black;
}

.btn {
  border-radius: 0;
}

.container {
  max-width: 1400px;
}

.btn-primary {
  background-color: #0078d4;
}

.nav-tabs .nav-item {
  width: 50%;
}

.nav-tabs .nav-item .nav-link {
  width: 100%;
  background-color: white;
}

.nav-tabs .nav-item .nav-link,
.nav-tabs .nav-item .nav-link.active,
.nav-tabs .nav-item .nav-link:focus {
  border-radius: 0;
  border: 0 solid white;
  outline: none;
}

.nav-tabs .nav-item .nav-link {
  color: #0078d4;
}
.nav-tabs .nav-item .nav-link.active {
  color: white;
  background-color: #0078d4;
}

/* nav links for Document Selector */
/* 
  .navbar .navbar-nav .nav-item .nav-link {
    padding: 0 1em;
  }
  .navbar .navbar-nav .nav-item:not(:last-child) .nav-link {
    border-right: 1px solid #a2a2a2;
  }  
  */

.text {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.loader,
.loader:after {
  border-radius: 50%;
  width: 10em;
  height: 10em;
}
.loader {
  margin: 60px auto;
  font-size: 10px;
  position: relative;
  text-indent: -9999em;
  overflow: hidden;
  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
  border-left: 1.1em solid #0078d4;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: load8 1.1s infinite linear;
  animation: load8 1.1s infinite linear;
}
@-webkit-keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

footer {
  z-index: 90;
  padding: 0.7rem 0;
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #efefef;
}

.landing-left-col {
  min-height: 880px;
  /* max-width: 703px; */
  background-image: url("./images/dude-with-notebook.png");
  background-repeat: no-repeat;
  background-size: auto 100%;
  background-color: pink;
}

.documentSelector {
  background-color: #0078d4;
  padding: 1px;
}

.linkedDocumentSelector {
  padding: 1px;
  color: #a2a2a2;
}

.linked-menu-item {
  color: #a2a2a2;
}

.active-linked-menu-item {
  color: #406fdb;
  text-decoration: underline;
}

.elevated {
  margin-top: 30px;
  padding-top: 60px;
  padding-bottom: 30px;
  padding-left: 30px;
  padding-right: 30px;
  border-radius: 10px;
  box-shadow: 3px 3px 20px 0 rgba(0, 0, 0, 0.13);
  border: solid 1px #dedede;
}

.left-elevated-column {
  padding-right: 20px;
}

.right-elevated-column {
  border-left: solid 1px #b2b2b2;
  padding-left: 20px;
}

.drag-and-drop-container {
  min-height: 540px;
}
.gallery-grid {
  margin-top: 20px;
}

.hr2 {
  margin-top: 1rem;
  margin-bottom: 1rem;
  border: 0;
  border-top: solid 1px #707070;
}

